[package]
name = "genomex"
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
authors = ["Thomas E. Wilson"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
rust-htslib = "0.51"
rustc-hash = "2.1"

mdi = { path = "../../../../../../frameworks/definitive/mdi-pipelines-framework/crates/mdi" }
# mdi = { path = "../../../../../../frameworks/developer-forks/mdi-pipelines-framework/crates/mdi" }
