[package]
name = "genomex"
rust-version = "1.92"
edition = "2024"
authors = ["Thomas E. Wilson"]

[dependencies]
rustc-hash  = "2.1"
regex       = "1.12"
serde       = { version = "1.0", features = ["derive"] }
rust-htslib = { version = "1.0", features = ["static"] }

# mdi = { git = "https://github.com/MiDataInt/mdi-pipelines-framework", branch = "main" }

mdi = { path = "../../../../../../frameworks/developer-forks/mdi-pipelines-framework/crates/mdi" }
